--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         <div class="travel_mainDiv">
             <img class="img-responsive" src="Infra-12-1024x683.jpg">
             <!-- Give text-capitalize below to make the first letters in Capitals-->
-            <h4 class=""><kbd>school auditorium</kbd></h4>
+            <h4 class="text-capitalize "><kbd>school auditorium</kbd></h4>
             <hr>
             <h5 class="text-success text-left text-capitalize">Was built in 1982</h5>
             <!-- Give text-muted below to show the text in grey color-->
-            <p class="text-left">Students enjoy here a lot. They see movies, presentations etc in this large auditorium of Shishukunj.
+            <p class="text-left text-muted">Students enjoy here a lot. They see movies, presentations etc in this large auditorium of Shishukunj.
                 Many competitions are also held here.
             </p>
         </div>
