--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="travel_mainDiv">
             <!--Give appropriate class below for the image img-responsive-->
             <img class="img-responsive" src="Infra-1-1024x683.jpg">
-            <h4 class="text-capitalize"><kbd>school library</kbd></h4>
+            <h4 class="text-capitalize text-success"><kbd>school library</kbd></h4>
             <hr>
             <!--Give classes below text-success text-left-->
             <h5 class="text-capitalize">Was built in 1980</h5>
